funciones add, subs, multi, divi

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -16,11 +16,11 @@
 
             <div class="input">
                 <div class="back-h3">
-                    <h3>aaaaaaaaaaa</h3>
+                    <h3></h3>
                 </div>
                 <div class=" div-input">
 
-                    <input type="text" placeholder="0aaaaaaaaaaaaaaaaaaaaa." >
+                    <input type="text" placeholder=".0" >
                 </div>
             </div>
     
