--- a/app/html/index.html
+++ b/app/html/index.html
@@ -16,7 +16,7 @@
 
             <div class="input">
                 <div class="back-h3">
-                    <h3>funciona</h3>
+                    <h3 id="lastResult">funciona</h3>
                 </div>
                 <div class="div-input">
                     <p class="text-calc" id="text" ></p>
@@ -24,25 +24,25 @@
             </div>
     
             <ul class="list-buttons" id="calculator">
-                <button class="btn-wave" data-type="operador" data-value="C"> C </button>
-                <button class="btn-wave" data-type="operador" data-value="DEL">DEL</button>
-                <button class="btn-wave" data-type="operador" data-value="%">%</button>
-                <button class="btn-wave" data-type="operador" data-value="/">/</button>
+                <button class="btn-wave" data-type="C" data-value="C"> C </button>
+                <button class="btn-wave" data-type="CE" data-value="CE">CE</button>
+                <button class="btn-wave" data-type="operador" data-value="divide">%</button>
+                <button class="btn-wave" data-type="operador" data-value="divide">/</button>
                 <button class="btn-wave number" id="button-7" data-type="number" data-value="7">7</button>
                 <button class="btn-wave number" id="button-8" data-type="number" data-value="8">8</button>
                 <button class="btn-wave number" id="button-9" data-type="number" data-value="9">9</button>
-                <button class="btn-wave" data-type="operador" data-value="x">X</button>
+                <button class="btn-wave" data-type="operador" data-value="multiply">X</button>
                 <button class="btn-wave number" id="button-4" data-type="number" data-value="4">4</button>
                 <button class="btn-wave number" id="button-5" data-type="number" data-value="5">5</button>
                 <button class="btn-wave number" id="button-6" data-type="number" data-value="6">6</button>
-                <button class="btn-wave" data-type="operador" data-value="-">-</button>
+                <button class="btn-wave" data-type="operador" data-value="substract">-</button>
                 <button class="btn-wave number" id="button-1" data-type="number" data-value="1">1</button>
                 <button class="btn-wave number" id="button-2" data-type="number" data-value="2">2</button>
                 <button class="btn-wave number" id="button-3" data-type="number" data-value="3">3</button>
-                <button class="btn-wave" data-type="operador" data-value="+">+</button>
+                <button class="btn-wave" data-type="operador" data-value="add">+</button>
                 <button class="button-0 btn-wave number" id="button-0" data-type="number" data-value="0">0</button>
-                <button class="btn-wave" data-type="point" data-value=".">.</button>
-                <button class="btn-wave" data-type="operador" data-value="equal">=</button>
+                <button class="btn-wave" data-type="number" data-value=".">.</button>
+                <button class="btn-wave" data-type="equal" data-value="equal">=</button>
                 
             </ul>
         </div>
